mysq-workbench/mysql-workbench-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: mysql-workbench
spec:
  basicAuth:
    secret: auth
